    - Improved performance of the main interface substantially. This is due to both fixing a big bug introduced a few versions ago, and some other targeted optimizations.
    - Added the ability to disable the percentage column in the main production table
    - Made the tutorial example validity detection more fine-grained
    - Removed the written tutorials since they were outdated and bad
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.72
Date: 27. 07. 2023
  Bugfixes:
    - Potentially fixed a crash caused by a migration issue

---------------------------------------------------------------------------------------------------
Version: 1.1.71
Date: 25. 07. 2023
  Changes:
    - Changed the mod shortcut and mod-gui icons to a proper icon instead of the 'FP' text
  Bugfixes:
    - Fixed that copy-pasting a machine could make the target have the wrong recipe category
    - Fixed a crash when loading a machine that doesn't have a sprite defined
    - Fixed utility dialog handcrafting trying to craft the wrong items
    - Fixed utility dialog handcrafting allowing the player to craft even if they didn't have the right permission

---------------------------------------------------------------------------------------------------
Version: 1.1.70
Date: 12. 06. 2023
  Bugfixes:
    - Fixed a crash when trying to delete a recipe in certain situations with the foldout subfloors-option enabled

---------------------------------------------------------------------------------------------------
Version: 1.1.69
Date: 08. 06. 2023
  Bugfixes:
    - Fixed that recipes would not correctly find the proper machine to use in some cases

---------------------------------------------------------------------------------------------------
Version: 1.1.68
Date: 06. 06. 2023
  Bugfixes:
    - Fixed that trying to pick a recipe for fuel would add an unrelated recipe